Changes to hostname iam.example.com

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,27 +1,44 @@
-# todo: modify this for k8
 # This is an alternate LB that should give us more control
-#global
+global
+	 tune.ssl.default-dh-param 2048
 #     daemon
 #     user nobody
 #     group nobody
 
 defaults
      mode     http
-     timeout connect 5000ms
-     timeout client     50000ms
-     timeout server     50000ms
+     timeout connect 5s
+     timeout client     5s
+     timeout server     5s
 
 frontend http-in
      mode http
-     bind *:80
+     bind :80
 	 acl am_acl path -m beg /openam
-	 acl am_missing_path_acl path -m beg /UI
+	 acl am_wrong_path_acl path -m beg /UI
 	 acl idm_acl path -m beg /openidm
 	 acl idm_admin_acl path -m beg /admin
+	 acl stats_acl path -m beg /ha-stats
      use_backend    openam-servers if am_acl
-     use_backend    openam-servers if am_missing_path_acl
+     use_backend    openam-servers if am_wrong_path_acl
 	 use_backend	openidm-servers if idm_admin_acl
 	 use_backend	openidm-servers if idm_acl
+	 use_backend	stats if stats_acl
+	 default_backend openidm-servers
+
+frontend www-https
+     bind :443 ssl crt /etc/ssl/combined.pem
+     reqadd X-Forwarded-Proto:\ https
+	 acl am_acl path -m beg /openam
+	 acl am_wrong_path_acl path -m beg /UI
+	 acl idm_acl path -m beg /openidm
+	 acl idm_admin_acl path -m beg /admin
+	 acl stats_acl path -m beg /ha-stats
+     use_backend    openam-servers if am_acl
+     use_backend    openam-servers if am_wrong_path_acl
+	 use_backend	openidm-servers if idm_admin_acl
+	 use_backend	openidm-servers if idm_acl
+	 use_backend	stats if stats_acl
 	 default_backend openidm-servers
 
 backend openam-servers
@@ -47,10 +64,10 @@ backend openidm-servers
      balance roundrobin
      server oidm1 openidm:8080 check inter 60000
 
-listen stats :81
-    mode http
-    stats enable
-    stats hide-version
-    stats realm Haproxy\ Statistics
-    stats uri /
-    stats auth admin:admin
+backend stats
+     mode http
+     stats enable
+     stats hide-version
+     stats realm Haproxy\ Statistics
+     stats uri /
+     stats auth admin:admin
