--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -27,6 +27,7 @@ frontend http-in
 	 default_backend openidm-servers
 
 frontend www-https
+     mode http
      bind :443 ssl crt /etc/ssl/combined.pem
      reqadd X-Forwarded-Proto:\ https
 	 acl am_acl path -m beg /openam
@@ -41,6 +42,14 @@ frontend www-https
 	 use_backend	stats if stats_acl
 	 default_backend openidm-servers
 
+frontend ldap
+     bind :389
+     default_backend opendj-servers
+
+frontend ldaps
+     bind :636 ssl crt /etc/ssl/combined.pem
+     default_backend opendj-servers
+
 backend openam-servers
      mode http
      option httpchk GET /
@@ -53,6 +62,7 @@ backend openam-servers
 #     acl hdr_location res.hdr(Location) -m found
 #     rspirep ^Location:\ (https?://openam-svc-a:8080/openam(/.*) Location:\ /3 if hdr_location
      # openam application cookie
+	 reqirep ^Host: Host:\ iam.example.com
      appsession amlbcookie len 20 timeout 3h request-learn
      balance roundrobin
      server oam1 openam-svc-a:8080 check inter 60000
@@ -63,6 +73,10 @@ backend openidm-servers
      option httpchk GET /
      balance roundrobin
      server oidm1 openidm:8080 check inter 60000
+
+backend opendj-servers
+	 balance roundrobin
+	 server odj1 opendj:389 check inter 60000
 
 backend stats
      mode http
