--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -76,7 +76,7 @@ backend openidm-servers
 
 backend opendj-servers
 	 balance roundrobin
-	 server odj1 opendj:389 check inter 60000
+	 server odj1 opendj:389 check
 
 backend stats
      mode http
