--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -6,7 +6,7 @@ global
 #     group nobody
 
 defaults
-     mode     http
+     mode     tcp
      timeout connect 5s
      timeout client     5s
      timeout server     5s
@@ -28,7 +28,7 @@ frontend http-in
 
 frontend www-https
      mode http
-     bind :443 ssl crt /etc/ssl/combined.pem
+     bind :443 ssl crt /etc/ssl/combined.pem ca-file /etc/ssl/combined.pem no-sslv3 no-tlsv10 ciphers HIGH:!aNULL:!MD5
      reqadd X-Forwarded-Proto:\ https
 	 acl am_acl path -m beg /openam
 	 acl am_wrong_path_acl path -m beg /UI
@@ -47,7 +47,7 @@ frontend ldap
      default_backend opendj-servers
 
 frontend ldaps
-     bind :636 ssl crt /etc/ssl/combined.pem
+     bind :636 ssl crt /etc/ssl/combined.pem ca-file /etc/ssl/combined.pem no-sslv3 no-tlsv10 ciphers HIGH:!aNULL:!MD5
      default_backend opendj-servers
 
 backend openam-servers
