--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,12 +1,15 @@
 # This is an alternate LB that should give us more control
 global
 	 tune.ssl.default-dh-param 2048
-#     daemon
-#     user nobody
-#     group nobody
+     daemon
+     user nobody
+     group nobody
+	 maxconn 2048
 
 defaults
-     mode     tcp
+     mode     http
+     option forwardfor
+     option http-server-close
      timeout connect 5s
      timeout client     5s
      timeout server     5s
@@ -43,10 +46,12 @@ frontend www-https
 	 default_backend openidm-servers
 
 frontend ldap
+	 mode tcp
      bind :389
      default_backend opendj-servers
 
 frontend ldaps
+	 mode tcp
      bind :636 ssl crt /etc/ssl/combined.pem ca-file /etc/ssl/combined.pem no-sslv3 no-tlsv10 ciphers HIGH:!aNULL:!MD5
      default_backend opendj-servers
 
@@ -75,8 +80,9 @@ backend openidm-servers
      server oidm1 openidm:8080 check inter 60000
 
 backend opendj-servers
+	 mode tcp
 	 balance roundrobin
-	 server odj1 opendj:389 check
+	 server odj1 opendj:389 check inter 60000
 
 backend stats
      mode http
