--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -2,20 +2,18 @@
 global
 	 tune.ssl.default-dh-param 2048
      daemon
-     user nobody
-     group nobody
 	 maxconn 2048
 
 defaults
      mode     http
-     option forwardfor
-     option http-server-close
      timeout connect 5s
      timeout client     5s
      timeout server     5s
 
 frontend http-in
      mode http
+     option forwardfor
+     option http-server-close
      bind :80
 	 acl am_acl path -m beg /openam
 	 acl am_wrong_path_acl path -m beg /UI
@@ -31,6 +29,8 @@ frontend http-in
 
 frontend www-https
      mode http
+     option forwardfor
+     option http-server-close
      bind :443 ssl crt /etc/ssl/combined.pem ca-file /etc/ssl/combined.pem no-sslv3 no-tlsv10 ciphers HIGH:!aNULL:!MD5
      reqadd X-Forwarded-Proto:\ https
 	 acl am_acl path -m beg /openam
@@ -45,18 +45,10 @@ frontend www-https
 	 use_backend	stats if stats_acl
 	 default_backend openidm-servers
 
-frontend ldap
-	 mode tcp
-     bind :389
-     default_backend opendj-servers
-
-frontend ldaps
-	 mode tcp
-     bind :636 ssl crt /etc/ssl/combined.pem ca-file /etc/ssl/combined.pem no-sslv3 no-tlsv10 ciphers HIGH:!aNULL:!MD5
-     default_backend opendj-servers
-
 backend openam-servers
      mode http
+     option forwardfor
+     option http-server-close
      option httpchk GET /
      #option httpchk GET /openam/isAlive.jsp
  # ProxyPass / http://openam-svc:8080/openam
@@ -75,12 +67,28 @@ backend openam-servers
 
 backend openidm-servers
      mode http
+     option forwardfor
+     option http-server-close
      option httpchk GET /
      balance roundrobin
      server oidm1 openidm:8080 check inter 60000
 
+frontend ldap
+	 mode tcp
+     timeout client     60s
+     bind :389
+     default_backend opendj-servers
+
+frontend ldaps
+	 mode tcp
+     timeout client     60s
+     bind :636 ssl crt /etc/ssl/combined.pem ca-file /etc/ssl/combined.pem no-sslv3 no-tlsv10 ciphers HIGH:!aNULL:!MD5
+     default_backend opendj-servers
+
 backend opendj-servers
 	 mode tcp
+     timeout connect 60s
+     timeout server     60s
 	 balance roundrobin
 	 server odj1 opendj:389 check inter 60000
 
