Updated haproxy.cfg again

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,101 +1,93 @@
 # This is an alternate LB that should give us more control
 global
-	 tune.ssl.default-dh-param 2048
-     daemon
-	 maxconn 2048
+    maxconn     4000
+    daemon
+	ssl-server-verify none
+	tune.ssl.default-dh-param 2048
 
 defaults
-     mode     http
-     timeout connect 5s
-     timeout client     5s
-     timeout server     5s
-
-frontend http-in
-     mode http
-     option forwardfor
-     option http-server-close
-     bind :80
-	 acl am_acl path -m beg /openam
-	 acl am_wrong_path_acl path -m beg /UI
-	 acl idm_acl path -m beg /openidm
-	 acl idm_admin_acl path -m beg /admin
-	 acl stats_acl path -m beg /ha-stats
-     use_backend    openam-servers if am_acl
-     use_backend    openam-servers if am_wrong_path_acl
-	 use_backend	openidm-servers if idm_admin_acl
-	 use_backend	openidm-servers if idm_acl
-	 use_backend	stats if stats_acl
-	 default_backend openidm-servers
-
-frontend www-https
-     mode http
-     option forwardfor
-     option http-server-close
-     bind :443 ssl crt /etc/ssl/combined.pem ca-file /etc/ssl/combined.pem no-sslv3 no-tlsv10 ciphers HIGH:!aNULL:!MD5
-     reqadd X-Forwarded-Proto:\ https
-	 acl am_acl path -m beg /openam
-	 acl am_wrong_path_acl path -m beg /UI
-	 acl idm_acl path -m beg /openidm
-	 acl idm_admin_acl path -m beg /admin
-	 acl stats_acl path -m beg /ha-stats
-     use_backend    openam-servers if am_acl
-     use_backend    openam-servers if am_wrong_path_acl
-	 use_backend	openidm-servers if idm_admin_acl
-	 use_backend	openidm-servers if idm_acl
-	 use_backend	stats if stats_acl
-	 default_backend openidm-servers
-
-backend openam-servers
-     mode http
-     option forwardfor
-     option http-server-close
-     option httpchk GET /
-     #option httpchk GET /openam/isAlive.jsp
- # ProxyPass / http://openam-svc:8080/openam
-	 acl am_acl path -m beg /openam
-	 reqrep ^([^\ :]*)\ [/]?(.*)     \1\ /openam/\2 if !am_acl
- # ProxyPassReverse / http://openam-svc-a:8080/openam
- # Note: we turn the urls into absolute in the mean time
-#     acl hdr_location res.hdr(Location) -m found
-#     rspirep ^Location:\ (https?://openam-svc-a:8080/openam(/.*) Location:\ /3 if hdr_location
-     # openam application cookie
-	 reqirep ^Host: Host:\ iam.example.com
-     appsession amlbcookie len 20 timeout 3h request-learn
-     balance roundrobin
-     server oam1 openam-svc-a:8080 check inter 60000
-     #server oam2 openam-svc-b:8080 check inter 60000
-
-backend openidm-servers
-     mode http
-     option forwardfor
-     option http-server-close
-     option httpchk GET /
-     balance roundrobin
-     server oidm1 openidm:8080 check inter 60000
-
-frontend ldap
-	 mode tcp
-     timeout client     60s
-     bind :389
-     default_backend opendj-servers
+    mode                    tcp
+    retries                 3
+    timeout queue           1m
+    timeout connect         10s
+    timeout client          1m
+    timeout server          1m
+    timeout check           10s
+    maxconn                 3000
 
 frontend ldaps
-	 mode tcp
-     timeout client     60s
-     bind :636 ssl crt /etc/ssl/combined.pem ca-file /etc/ssl/combined.pem no-sslv3 no-tlsv10 ciphers HIGH:!aNULL:!MD5
-     default_backend opendj-servers
+    bind *:636 ssl crt /etc/ssl/combined.pem ca-file /etc/ssl/combined.pem no-sslv3 no-tlsv10 ciphers HIGH:!aNULL:!MD5
+    timeout client         15s
+    default_backend        ldap-servers
+ 
+backend ldap-servers
+    balance     roundrobin
+	server odj1 opendj:636 check ssl
+    timeout server        10s
 
-backend opendj-servers
-	 mode tcp
-     timeout connect 60s
-     timeout server     60s
-	 balance roundrobin
-	 server odj1 opendj:389 check inter 60000
+frontend http-in
+    mode http
+    option forwardfor
+    bind :80
+	acl am_acl path -m beg /openam
+	acl am_wrong_path_acl path -m beg /UI
+	acl idm_acl path -m beg /openidm
+	acl idm_admin_acl path -m beg /admin
+	acl stats_acl path -m beg /ha-stats
+    use_backend    openam-servers if am_acl
+    use_backend    openam-servers if am_wrong_path_acl
+	use_backend	openidm-servers if idm_admin_acl
+	use_backend	openidm-servers if idm_acl
+	use_backend	stats if stats_acl
+	default_backend openidm-servers
+
+frontend www-https
+    mode http
+    option forwardfor
+    bind :443 ssl crt /etc/ssl/combined.pem ca-file /etc/ssl/combined.pem no-sslv3 no-tlsv10 ciphers HIGH:!aNULL:!MD5
+    reqadd X-Forwarded-Proto:\ https
+	acl am_acl path -m beg /openam
+	acl am_wrong_path_acl path -m beg /UI
+	acl idm_acl path -m beg /openidm
+	acl idm_admin_acl path -m beg /admin
+	acl stats_acl path -m beg /ha-stats
+    use_backend    openam-servers if am_acl
+    use_backend    openam-servers if am_wrong_path_acl
+	use_backend	openidm-servers if idm_admin_acl
+	use_backend	openidm-servers if idm_acl
+	use_backend	stats if stats_acl
+	default_backend openidm-servers
+
+backend openam-servers
+    mode http
+    option http-server-close
+    option httpchk GET /
+    #option httpchk GET /openam/isAlive.jsp
+ 	# ProxyPass / http://openam-svc:8080/openam
+	acl am_acl path -m beg /openam
+	reqrep ^([^\ :]*)\ [/]?(.*)     \1\ /openam/\2 if !am_acl
+ 	# ProxyPassReverse / http://openam-svc-a:8080/openam
+ 	# Note: we turn the urls into absolute in the mean time
+	#     acl hdr_location res.hdr(Location) -m found
+	#     rspirep ^Location:\ (https?://openam-svc-a:8080/openam(/.*) Location:\ /3 if hdr_location
+    # openam application cookie
+	reqirep ^Host: Host:\ iam.example.com
+    cookie amlbcookie
+    server oam1 openam-svc-a:8080 check inter 60000
+    server oam2 openam-svc-b:8080 check inter 60000
+
+backend openidm-servers
+    mode http
+    option http-server-close
+    option httpchk GET /
+    balance roundrobin
+    server oidm1 openidm:8080 check inter 60000
 
 backend stats
-     mode http
-     stats enable
-     stats hide-version
-     stats realm Haproxy\ Statistics
-     stats uri /
-     stats auth admin:admin
+    mode http
+    stats enable
+    stats hide-version
+	stats scope .
+    stats realm Haproxy\ Statistics
+    stats uri /
+    stats auth admin:admin
