Support for two OpenAMs and compose

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -87,7 +87,7 @@ backend stats
     mode http
     stats enable
     stats hide-version
-	stats scope .
     stats realm Haproxy\ Statistics
     stats uri /
     stats auth admin:admin
+	#stats scope .
