Support for two OpenAMs doesnt work, sticking to only one

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -74,7 +74,7 @@ backend openam-servers
 	reqirep ^Host: Host:\ iam.example.com
     cookie amlbcookie
     server oam1 openam-svc-a:8080 check inter 60000
-    server oam2 openam-svc-b:8080 check inter 60000
+    #server oam2 openam-svc-b:8080 check inter 60000
 
 backend openidm-servers
     mode http
