trying to fix wrong lb name for openam

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,6 +1,6 @@
 # This is an alternate LB that should give us more control
 global
-    maxconn     4000
+    maxconn     3000
     daemon
 	ssl-server-verify none
 	tune.ssl.default-dh-param 2048
@@ -71,7 +71,7 @@ backend openam-servers
 	#     acl hdr_location res.hdr(Location) -m found
 	#     rspirep ^Location:\ (https?://openam-svc-a:8080/openam(/.*) Location:\ /3 if hdr_location
     # openam application cookie
-	reqirep ^Host: Host:\ iam.example.com
+	reqirep ^Host: Host:\ iam.xdct.net
     cookie amlbcookie
     server oam1 openam-svc-a:8080 check inter 60000
     #server oam2 openam-svc-b:8080 check inter 60000
