Added SSL redirect for port 80

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -29,17 +29,7 @@ frontend http-in
     mode http
     option forwardfor
     bind :80
-	acl am_acl path -m beg /openam
-	acl am_wrong_path_acl path -m beg /UI
-	acl idm_acl path -m beg /openidm
-	acl idm_admin_acl path -m beg /admin
-	acl stats_acl path -m beg /ha-stats
-    use_backend    openam-servers if am_acl
-    use_backend    openam-servers if am_wrong_path_acl
-	use_backend	openidm-servers if idm_admin_acl
-	use_backend	openidm-servers if idm_acl
-	use_backend	stats if stats_acl
-	default_backend openidm-servers
+	redirect scheme https code 301 if !{ ssl_fc }
 
 frontend www-https
     mode http
