--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -61,7 +61,7 @@ backend openam-servers
 	#     acl hdr_location res.hdr(Location) -m found
 	#     rspirep ^Location:\ (https?://openam-svc-a:8080/openam(/.*) Location:\ /3 if hdr_location
     # openam application cookie
-	reqirep ^Host: Host:\ iam.xdct.net
+	reqirep ^Host: Host:\ iam.example.com
     cookie amlbcookie
     server oam1 openam-svc-a:8080 check inter 60000
     #server oam2 openam-svc-b:8080 check inter 60000
